# connect4

./: .gitignore  CMakeLists.txt  main.cpp
include/: AI.h  Boton.h  EstadoSlot.h  GameState.h  Humano.h  Jugador.h  Menu.h  ModoDeJuego.h  Pantalla.h  PantallaHistorial.h  PantallaPrincipal.h  PantallaSeleccionModo.h  Partida.h  PartidaGuardada.h  Principal.h  Tablero.h
src/data/: PartidaGuardada.cpp
src/model/: AI.cpp  ClaseEntrada.cpp  GameState.cpp  Humano.cpp  Jugador.cpp  Partida.cpp
src/view/: Boton.cpp  Menu.cpp  PantallaHistorial.cpp  PantallaJuego.cpp  PantallaModalidad.cpp  PantallaModos.cpp  PantallaPrincipal.cpp  Principal.cpp  Tablero.cpp
